2007-03-23  David Kastrup  <dak@gnu.org>

	* context.el (TeX-ConTeXt-sentinel): Fix end-of-run detection.

2007-03-19  Ralf Angeli  <angeli@caeruleus.net>

	* style/comment.el: New file.

	* Makefile.in (STYLESRC): Add style/comment.el.

	* font-latex.el (font-latex-syntactic-keywords-extra): New
	variable.
	(font-latex-set-syntactic-keywords): Use it.

	* tex-style.el (LaTeX-comment-env-list): New variable.

2007-03-18  Ralf Angeli  <angeli@caeruleus.net>

	* doc/auctex.texi (Commands): Remove dependency on software du
	jour from description of `TeX-DVI-via-PDFTeX'.

2007-03-12  Ralf Angeli  <angeli@caeruleus.net>

	* font-latex.el (font-latex-quotes): Add nil option.
	(font-latex-match-quotation)
	(font-latex-extend-region-backwards-quotation): Do nothing if
	`font-latex-quotes' is nil.

	* doc/auctex.texi (Font Locking): Document nil option of
	`font-latex-quotes'.

2007-03-11  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-fold-math-spec-list): `decode-char' is not
	autoloaded in XEmacs.  Only use it when it is defined.

	* doc/auctex.texi (European): Document `icelandic' language
	option.

	* Makefile.in (STYLESRC): Add style/icelandic.el.

	* style/icelandic.el: New file.

2007-03-11  David Kastrup  <dak@gnu.org>

	* RELEASE (Footnotes): Update Emacs CVS locations.

2007-03-10  Ralf Angeli  <angeli@caeruleus.net>

	* tex-fold.el (TeX-fold-auto): Default to nil.

2007-03-09  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-clean): Catch error on Emacs 21 when only one file
	is to be deleted.

2007-03-06  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-search-syntax-table): Set syntax of ?\( and ?\)
	explicitely to whitespace for Emacs 21.
	(TeX-search-syntax-table): Clean the syntax table more thoroughly.

2007-03-04  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-find-macro-boundaries): Make it possible to restrict
	the search with new argument `lower-bound'.
	(TeX-find-macro-start): Make it possible to restrict the search